<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_status"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/ic_envelope"
        android:title="@string/prescription" />

    <item
        android:id="@+id/navigation_workout"
        android:icon="@drawable/ic_directions_run_black_24dp"
        android:title="@string/title_workout" />



    <!--<item-->
        <!--android:id="@+id/navigation_notification"-->
        <!--android:icon="@drawable/ic_notifications_black_24dp"-->
        <!--android:title="@string/title_notifications" />-->

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile" />

</menu>
