<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_selector"
    tools:context=".StatusFragment">

    <ProgressBar
        android:id="@+id/pb_status"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="visible" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srl_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/sv_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_input_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/common_margin_size"
                    app:cardCornerRadius="@dimen/card_radius_size"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/common_padding_size"
                        android:visibility="visible">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/txt_input_date"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edt_input_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:hint="eg: yyyy-MM-dd"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textStyle="italic" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_exercise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/common_margin_size"
                    app:cardCornerRadius="@dimen/card_radius_size">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/common_padding_size">

                        <TextView
                            android:id="@+id/tv_exercise_sessions"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="2"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                        <TextView
                            android:id="@+id/tv_exercise_sessions_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/txt_exercise_session_msg"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/tv_target_heart_rate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/txt_heart_rate_value3"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                        <TextView
                            android:id="@+id/tv_target_heart_rate_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/txt_target_heart_rate_msg"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/tv_maximum_heart_rate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/txt_heart_rate_value3"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/tv_maximum_heart_rate_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/txt_maximum_heart_rate_msg"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textStyle="italic"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/tv_exercise_duration"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/txt_minute"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                        <TextView
                            android:id="@+id/tv_exercise_duration_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/txt_exercise_duration_per_session_msg"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/tv_exercise_last_updated"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/common_padding_size"
                            android:text="@string/txt_last_updated"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textStyle="italic" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_workout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/common_margin_size"
                    app:cardCornerRadius="@dimen/card_radius_size">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/common_padding_size"
                        android:visibility="visible">

                        <TextView
                            android:id="@+id/tv_steps"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/txt_steps_count"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                        <TextView
                            android:id="@+id/tv_steps_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/txt_daily_step_count_msg"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/tv_workout_last_updated"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/common_padding_size"
                            android:text="@string/txt_last_updated"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textStyle="italic" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_prescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/common_margin_size"
                    app:cardCornerRadius="@dimen/card_radius_size"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/common_padding_size"
                        android:visibility="visible">

                        <TextView
                            android:id="@+id/tv_targetWarmUpDuration"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:text="@string/txt_targetWarmUpDuration"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/tv_targetFirstExercise"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/common_padding_size"
                            android:text="@string/txt_targetFirstMainExerciseDuration"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/tv_targetFirstRest"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/common_padding_size"
                            android:text="@string/txt_targetFirstRestDuration"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/tv_targetSecondExercise"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/common_padding_size"
                            android:text="@string/txt_targetSecondMainExerciseDuration"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/tv_targetSecondRest"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/common_padding_size"
                            android:text="@string/txt_targetSecondRestDuration"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/tv_targetCoolDown"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/common_padding_size"
                            android:text="@string/txt_targetCooldownDuration"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/tv_targetTotalExercise"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/common_padding_size"
                            android:text="@string/txt_targetTotalExerciseDuration"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textStyle="italic" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>

        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</FrameLayout>