<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_workout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin_size"
        app:cardCornerRadius="@dimen/card_radius_size_big">

        <LinearLayout
            android:id="@+id/ll_workout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_padding_size"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:paddingLeft="@dimen/common_padding_size"
                    android:paddingTop="@dimen/common_padding_size"
                    android:paddingRight="@dimen/common_padding_size"
                    android:text="@string/txt_steps2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_step_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="100"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/colorAccent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:paddingLeft="@dimen/common_padding_size"
                    android:paddingTop="@dimen/common_padding_size"
                    android:paddingRight="@dimen/common_padding_size"
                    android:text="@string/txt_distance"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_distance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="1.4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/colorAccent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:paddingLeft="@dimen/common_padding_size"
                    android:paddingTop="@dimen/common_padding_size"
                    android:paddingRight="@dimen/common_padding_size"
                    android:text="@string/txt_calories"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_calories"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="1345"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/colorAccent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:paddingLeft="@dimen/common_padding_size"
                    android:paddingTop="@dimen/common_padding_size"
                    android:paddingRight="@dimen/common_padding_size"
                    android:text="Date/Time:"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_date_day"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/txt_heart_rate_value2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/colorAccent"/>

            </LinearLayout>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>